--- a/YazarWebsite/Views/AdminCategory/Index.cshtml
+++ b/YazarWebsite/Views/AdminCategory/Index.cshtml
@@ -1,18 +1,31 @@
-﻿
+﻿@using EntityLayer.Concrete
+@model List<Category>
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
+<br />
 <br />
 <table class="table table-bordered">
     <tr>
-        <th>Id</th>
-        <th>Kategori</th>
-        <th>Durum</th>
+        <th>#</th>
+        <th>Kategori Adı</th>
+        <th>Sil</th>
+        <th>Güncelle</th>
+        <th>Başlıklar</th>
     </tr>
-    <tr>
-        <td>Id</td>
-        <td>Kategori</td>
-        <td>Durum</td>
-    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <th>@item.CategoryId</th>
+            <td>@item.CategoryName</td>
+            <th><a href="/AdminCategory/DeleteCategory/@item.CategoryId" class="btn btn-danger">Sil</a></th>
+            <th><a href="/AdminCategory/EditCategory/@item.CategoryId" class="btn btn-warning">Güncelle</a></th>
+            <th><a href="#" class="btn btn-primary">Başlıklar</a></th>
+        </tr>
+    }
 </table>
+<a href="/AdminCategory/AddCategory" class="btn btn-info">Yeni Kategori</a>
