--- a/YazarWebsite/Views/Heading/EditHeading.cshtml
+++ b/YazarWebsite/Views/Heading/EditHeading.cshtml
@@ -10,8 +10,18 @@
 {
     <div class="form-group">
         @Html.Label("Başlık Id")
+        @Html.TextBoxFor(x => x.HeadingId, new { @class = "form-control" })
+        <br />
+        @Html.Label("Başlık Adı")
         @Html.TextBoxFor(x => x.HeadingName, new { @class = "form-control" })
         <br />
+        @Html.Label("Tarih")
+        @Html.TextBoxFor(x => x.HeadingDate, new { @class = "form-control" })
+        <br />
+        @Html.Label("Yazar Id")
+        @Html.TextBoxFor(x => x.WriterId, new { @class = "form-control" })
+        <br />
+        @Html.Label("Kategori")
         @Html.DropDownListFor(x => x.CategoryId, (List<SelectListItem>)ViewBag.vlc, new { @class = "form-control" })
         <br />
         <button class="btn btn-success">Güncelle</button>
