--- a/YazarWebsite/Views/Heading/Index.cshtml
+++ b/YazarWebsite/Views/Heading/Index.cshtml
@@ -33,8 +33,11 @@
                             <th style="width: 20%">
                                 Başlık Adı
                             </th>
-                            <th style="width: 30%">
+                            <th style="width: 15%">
                                 Oluşturan Yazar
+                            </th>
+                            <th style="width: 10%" class="text-center">
+                                Durum
                             </th>
                             <th style="width: 8%" class="text-center">
                                 Kategori
@@ -95,6 +98,9 @@
                                     </ul>
                                 </td>
                                 <td class="project-state">
+                                    <span>@item.HeadingStatus</span>
+                                </td>
+                                <td class="project-state">
                                     <span class="@color">@item.Category.CategoryName</span>
                                 </td>
                                 <td class="project-actions text-right">
@@ -108,7 +114,7 @@
                                         </i>
                                         Düzenle
                                     </a>
-                                    <a class="btn btn-danger btn-sm" href="#">
+                                    <a class="btn btn-danger btn-sm" href="/Heading/DeleteHeading/@item.HeadingId">
                                         <i class="fas fa-trash">
                                         </i>
                                         Sil
