--- a/YazarWebsite/Views/Message/Inbox.cshtml
+++ b/YazarWebsite/Views/Message/Inbox.cshtml
@@ -1,33 +1,24 @@
-﻿@using EntityLayer.Concrete
-@model List<Contact>
+﻿
+@using EntityLayer.Concrete
+@model List<Message>
+
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Inbox";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <!DOCTYPE html>
 <html>
-
 <body class="hold-transition sidebar-mini">
-
-    <!-- Content Wrapper. Contains page content -->
-    <!-- Content Header (Page header) -->
     <section class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>Mesaj Sayfası</h1>
-                </div>
-                <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">Inbox</li>
-                    </ol>
+                    <h1 style="text-align:center">Mesaj Sayfası</h1>
                 </div>
             </div>
-        </div><!-- /.container-fluid -->
+        </div>
     </section>
-    <!-- Main content -->
     <section class="content">
         <div class="row">
             @Html.Action("MessageListMenu", "Contact")
@@ -37,7 +28,7 @@
                         <h3 class="card-title">Gelen Mesajlar</h3>
                         <div class="card-tools">
                             <div class="input-group input-group-sm">
-                                <input type="text" class="form-control" placeholder="Mail Kutusunda Ara">
+                                <input type="text" class="form-control" placeholder="Mail kutusunda ara">
                                 <div class="input-group-append">
                                     <div class="btn btn-primary">
                                         <i class="fas fa-search"></i>
@@ -45,12 +36,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- /.card-tools -->
                     </div>
-                    <!-- /.card-header -->
                     <div class="card-body p-0">
                         <div class="mailbox-controls">
-                            <!-- Check all button -->
                             <button type="button" class="btn btn-default btn-sm checkbox-toggle">
                                 <i class="far fa-square"></i>
                             </button>
@@ -59,7 +47,6 @@
                                 <button type="button" class="btn btn-default btn-sm"><i class="fas fa-reply"></i></button>
                                 <button type="button" class="btn btn-default btn-sm"><i class="fas fa-share"></i></button>
                             </div>
-                            <!-- /.btn-group -->
                             <button type="button" class="btn btn-default btn-sm"><i class="fas fa-sync-alt"></i></button>
                             <div class="float-right">
                                 1-50/200
@@ -67,15 +54,14 @@
                                     <button type="button" class="btn btn-default btn-sm"><i class="fas fa-chevron-left"></i></button>
                                     <button type="button" class="btn btn-default btn-sm"><i class="fas fa-chevron-right"></i></button>
                                 </div>
-                                <!-- /.btn-group -->
                             </div>
-                            <!-- /.float-right -->
                         </div>
                         <div class="table-responsive mailbox-messages">
                             <table class="table table-hover table-striped">
                                 <tbody>
                                     @foreach (var item in Model)
                                     {
+
                                         <tr>
                                             <td>
                                                 <div class="icheck-primary">
@@ -83,25 +69,21 @@
                                                     <label for="check1"></label>
                                                 </div>
                                             </td>
-                                            <td class="mailbox-star"><a href="/Contact/GetContactDetails/@item.ContactId"><i class="fas fa-star text-warning"></i></a></td>
-                                            <td class="mailbox-name"><a href="/Contact/GetContactDetails/@item.ContactId">@item.UserName</a></td>
+                                            <td class="mailbox-star"><a href="/Message/GetInBoxMessageDetails/@item.MessageId"><i class="fas fa-star text-warning"></i></a></td>
+                                            <td class="mailbox-name"><a href="/Message/GetInBoxMessageDetails/@item.MessageId">@item.SenderMail</a></td>
                                             <td class="mailbox-subject">
-                                                <b>@item.Subject</b> - @item.Message
+                                                <b>@item.Subject</b><br />@item.MessageContent
                                             </td>
                                             <td class="mailbox-attachment"></td>
-                                            <td class="mailbox-date">@(((DateTime)item.ContactDate).ToString("dd-MMM-yyyy"))</td>
+                                            <td class="mailbox-date"> @(((DateTime)item.MessageDate).ToString("dd-MMM-yy"))</td>
                                         </tr>
                                     }
                                 </tbody>
                             </table>
-                            <!-- /.table -->
                         </div>
-                        <!-- /.mail-box-messages -->
                     </div>
-                    <!-- /.card-body -->
                     <div class="card-footer p-0">
                         <div class="mailbox-controls">
-                            <!-- Check all button -->
                             <button type="button" class="btn btn-default btn-sm checkbox-toggle">
                                 <i class="far fa-square"></i>
                             </button>
@@ -110,7 +92,6 @@
                                 <button type="button" class="btn btn-default btn-sm"><i class="fas fa-reply"></i></button>
                                 <button type="button" class="btn btn-default btn-sm"><i class="fas fa-share"></i></button>
                             </div>
-                            <!-- /.btn-group -->
                             <button type="button" class="btn btn-default btn-sm"><i class="fas fa-sync-alt"></i></button>
                             <div class="float-right">
                                 1-50/200
@@ -118,18 +99,12 @@
                                     <button type="button" class="btn btn-default btn-sm"><i class="fas fa-chevron-left"></i></button>
                                     <button type="button" class="btn btn-default btn-sm"><i class="fas fa-chevron-right"></i></button>
                                 </div>
-                                <!-- /.btn-group -->
                             </div>
-                            <!-- /.float-right -->
                         </div>
                     </div>
                 </div>
-                <!-- /.card -->
             </div>
-            <!-- /.col -->
         </div>
-        <!-- /.row -->
     </section>
-
 </body>
 </html>
