--- a/YazarWebsite/Views/Shared/_WriterLayout.cshtml
+++ b/YazarWebsite/Views/Shared/_WriterLayout.cshtml
@@ -66,10 +66,10 @@ to get the desired effect
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/Heading/Index/" class="nav-link">
+                            <a href="/WriterPanel/MyHeading/" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
-                                    Başlıklar
+                                    Başlıklarım
                                 </p>
                             </a>
                         </li>
