--- a/YazarWebsite/Views/WriterPanel/MyHeading.cshtml
+++ b/YazarWebsite/Views/WriterPanel/MyHeading.cshtml
@@ -36,9 +36,6 @@
                             <th style="width: 15%">
                                 Oluşturan Yazar
                             </th>
-                            <th style="width: 10%" class="text-center">
-                                Durum
-                            </th>
                             <th style="width: 8%" class="text-center">
                                 Kategori
                             </th>
@@ -98,9 +95,6 @@
                                     </ul>
                                 </td>
                                 <td class="project-state">
-                                    <span>@item.HeadingStatus</span>
-                                </td>
-                                <td class="project-state">
                                     <span class="@color">@item.Category.CategoryName</span>
                                 </td>
                                 <td class="project-actions text-right">
@@ -109,12 +103,12 @@
                                         </i>
                                         İçerik
                                     </a>
-                                    <a class="btn btn-info btn-sm" href="/Heading/EditHeading/@item.HeadingId">
+                                    <a class="btn btn-info btn-sm" href="/WriterPanel/EditHeading/@item.HeadingId">
                                         <i class="fas fa-pencil-alt">
                                         </i>
                                         Düzenle
                                     </a>
-                                    <a class="btn btn-danger btn-sm" href="/Heading/DeleteHeading/@item.HeadingId">
+                                    <a class="btn btn-danger btn-sm" href="/WriterPanel/DeleteHeading/@item.HeadingId">
                                         <i class="fas fa-trash">
                                         </i>
                                         Sil
@@ -134,4 +128,4 @@
 </body>
 </html>
 
-<a href="/Heading/AddHeading" class="btn btn-primary">Yeni Başlık Girişi</a>
+<a href="/WriterPanel/NewHeading" class="btn btn-primary">Yeni Başlık Girişi</a>
