--- a/YazarWebsite/Views/WriterPanelMessagee/MessageListMenu.cshtml
+++ b/YazarWebsite/Views/WriterPanelMessagee/MessageListMenu.cshtml
@@ -2,7 +2,7 @@
 @model List<Message>
 
 <div class="col-md-3">
-    <a href="/Message/NewMessage/" class="btn btn-primary btn-block mb-3">Yeni Mesaj Oluştur</a>
+    <a href="/WriterPanelMessagee/NewMessage/" class="btn btn-primary btn-block mb-3">Yeni Mesaj Oluştur</a>
     <div class="card">
         <div class="card-header">
             <h3 class="card-title">Seçenekler</h3>
@@ -15,13 +15,13 @@
         <div class="card-body p-0">
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item active">
-                    <a href="/Message/Inbox" class="nav-link">
+                    <a href="/WriterPanelMessagee/Inbox" class="nav-link">
                         <i class="fas fa-inbox"></i> Gelen Mesajlar
                         <span class="badge bg-primary float-right">12</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/Message/Sendbox/" class="nav-link">
+                    <a href="/WriterPanelMessagee/Sendbox/" class="nav-link">
                         <i class="far fa-envelope"></i> Gönderilen Mesajlar
                     </a>
                 </li>
