--- a/YazarWebsite/Views/Login/WriterLogin.cshtml
+++ b/YazarWebsite/Views/Login/WriterLogin.cshtml
@@ -40,7 +40,7 @@
                                     <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
                                 </div>
                                 <div class="form-group">
-                                    <button type="submit" class="form-control btn btn-primary submit px-3"></button>
+                                    <button type="submit" class="form-control btn btn-primary submit px-3">Giriş Yap</button>
                                 </div>
                                 <div class="form-group d-md-flex">
                                     <div class="w-50">
