--- a/YazarWebsite/Views/WriterPanelContent/ToDoList.cshtml
+++ b/YazarWebsite/Views/WriterPanelContent/ToDoList.cshtml
@@ -5,7 +5,7 @@
 }
 
 <p>#1 Profilim Sayfası</p>
-<p>#2 Tüm Başlıklarda Paging</p>
+<p>#2 Tüm Başlıklarda Paging --> Tamamlandı</p>
 <p>#3 Mesajlarda Session</p>
 <p>#4 Oturum Yönetiminin Mimariye Taşınması</p>
 <p>#5 Token Kullanımı</p>
