--- a/YazarWebsite/Views/WriterPanelMessagee/Inbox.cshtml
+++ b/YazarWebsite/Views/WriterPanelMessagee/Inbox.cshtml
@@ -12,7 +12,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 style="text-align:center">Yeni Mesaj Sayfası</h1>
+                    <h1>Mesaj Sayfası</h1>
                 </div>
             </div>
         </div>
